[project]
name = "asyncio-workbooks"
version = "0.1.0"
description = "Practice workbooks for mastering Python asyncio and async programming"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "aiomultiprocess>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
